# bob-skill-installer

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  README.zh.md  pyproject.toml
.bob/commands/: install-skill.md
.bob/skills/anysearch/: .gitignore
docs/: architecture.md  blog-note.md  security.md
examples/: README.md
examples/sample-claude-skill/: CLAUDE.md
src/bob_skill_installer/: __init__.py  exceptions.py  logging_config.py  models.py  report.py
src/bob_skill_installer/analyzer/: __init__.py  format_detector.py  repo_analyzer.py
src/bob_skill_installer/cli/: __init__.py  main.py
src/bob_skill_installer/converters/: __init__.py  base.py  claude.py  cline.py  cursor.py  extraction.py  generic.py  openai.py  registry.py  roocode.py  windsurf.py
src/bob_skill_installer/github/: __init__.py  fetcher.py  url_parser.py
src/bob_skill_installer/installer/: __init__.py  installer.py  pipeline.py
src/bob_skill_installer/security/: __init__.py  scanner.py
src/bob_skill_installer/templates/: skill_md.j2
src/bob_skill_installer/validators/: __init__.py  skill_validator.py
tests/: conftest.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_converters.py  test_extraction.py  test_fetcher.py  test_format_detector.py  test_installer.py  test_report_models.py  test_security.py  test_url_parser.py  test_validator.py
