[project]
name = "bob-skill-installer"
version = "0.1.0"
description = "Download, analyze, convert, validate, and install third-party open-source AI skills into IBM Bob."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "IBM Bob Skill Installer contributors" }]
keywords = ["ibm-bob", "skills", "ai", "installer", "converter"]
dependencies = [
    "GitPython>=3.1.43",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
install-skill = "bob_skill_installer.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bob_skill_installer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: end-to-end installs from fixture repositories",
]

[tool.coverage.run]
source = ["bob_skill_installer"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Typer's API requires Option()/Argument() calls as parameter defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
# Tests favor explicit, readable construction over line-length purity.
"tests/**" = ["E501"]
